--- a/index.html
+++ b/index.html
@@ -19,23 +19,14 @@
 
       <div id="back" class="album">
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3>| FROM DESPICABLE ME 2 |</h3>
+      <h1>HAPPY</h1>
+      <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
+      <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
 
-        <!-- Level 1 'HAPPY' Header -->
-
-        <!-- Level 3 'WRITTEN BY...' Header -->
-
-        <!-- pararaph text 'PUBLISHED BY...' -->
-
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
-        <!-- span text 'COLUMBIARECORDS.COM' -->
-
-        <br>
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+      <span>PHARRELLWILLIAMS.COM</span>
+      <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
+      <span>COLUMBIARECORDS.COM</span>
 
       </div>
     </div>
