--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
       <span>COLUMBIARECORDS.COM</span>
       
-      
+       <br>
+
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
 
       </div>
     </div>
